# lmm_homework_feedback

./: .env.example  .gitignore  Makefile  app.js  index.html  indexedDbSaver.js  main.py  package-lock.json  package.json  prompts.js  pyproject.toml  server.py  style.css  vite.config.js
.github/workflows/: deploy.yml
app/: assignments_loader.py  auth.py  config.py  db.py  logging_config.py  main.py  picker.py  proof.py  templating.py  uploads.py
app/graders/: excel.py  image.py  python_code.py  text.py
app/llm/: grader.py  prompts.py  router.py  verdicts.py
app/routes/: admin.py  auth.py  student.py
app/static/: style.css
app/templates/: _queue_status.html  _turn.html  _turn_row.html  admin_audit.html  attempt.html  base.html  login.html  picker.html  receipt.html
assignments/: week3_visualization.md
cli/: audit.py  load_assignments.py  manage_users.py  verify_token.py
config/: llm.toml  llm_win11.toml
deploy/: README.md  caddyfile  tutor-app.service  tutor-llama.service
docs/: ADA_Class_Description.md
docs/design/: 01_initial_design_doc.md  full_frontend_solution.md  question_api_spec.md  todo.md
questions/: questions.json
questions/01-Introduction/: q1.md  q2.md  q3.md  q4.md  q5.md  (+2 more)
scripts/: backup.sh  llama_server.sh  llama_smoketest.py  locust_students.py  start_server.sh
tests/: conftest.py  test_assignments_loader.py  test_auth.py  test_graders_multimodal.py  test_grading_loop.py  test_guardrails.py  test_logging.py  test_picker.py  test_proof.py  test_queue.py  test_router.py  test_schema.py  test_streaming.py  test_uploads.py
(+17 files in other folders)
