[project]
name = "llm-homework-tutor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "argon2-cffi>=23.1",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.3",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "locust>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "locust>=2.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
